--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "myport",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jjunghub.github.io/portfolio",
   "dependencies": {
     "@material-ui/core": "^3.6.2",
     "@material-ui/icons": "^3.0.1",
     "classnames": "^2.2.6",
+    "gh-pages": "^2.0.1",
     "history": "^4.7.2",
     "inspector": "^0.5.0",
     "moment": "^2.22.2",
@@ -24,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
